Major auditd rewrite for launchd(8) support.  This required:
(1) Adding libauditd library that is shared between launchd and auditd. 

(2) Adding the AUDIT_TRIGGER_INITIALIZE trigger (sent via 'audit -i')
    for (re)starting auditing under launchd(8) on Mac OS X.

(3) Separating Mac OS X and FreeBSD dependent code in auditd.c into
   	    auditd_darwin.c and auditd_fbsd.c files.

This changeset also includes:

(1) Crash recovery of previous audit trail file when detected on audit
    startup that it has not been properly terminated.

(2) Add the event AUE_audit_recovery to indicated when an audit trail
    file has been recovered from not being properly terminated.  This
    event is stored in the new audit trail file and includes the path
    of recovered audit trail file.

(3) Add an event for the posix_spawn(2) and fsgetpath(2) Mac OS X
    system calls.

(4) For Mac OS X, we use ASL(3) instead of syslog(3) for logging.  Add
    support for NOTICE level logging. 

[git-p4: depot-paths = "//depot/projects/trustedbsd/openbsm/": change = 154466]

--- a/configure.ac
+++ b/configure.ac
@@ -3,7 +3,7 @@
 
 AC_PREREQ(2.59)
 AC_INIT([OpenBSM], [1.1alpha4], [trustedbsd-audit@TrustesdBSD.org],[openbsm])
-AC_REVISION([$P4: //depot/projects/trustedbsd/openbsm/configure.ac#44 $])
+AC_REVISION([$P4: //depot/projects/trustedbsd/openbsm/configure.ac#45 $])
 AC_CONFIG_SRCDIR([bin/auditreduce/auditreduce.c])
 AC_CONFIG_AUX_DIR(config)
 AC_CONFIG_HEADER([config/config.h])
@@ -139,6 +139,7 @@ AC_CONFIG_FILES([Makefile
                  bin/auditreduce/Makefile
                  bin/praudit/Makefile
                  bsm/Makefile
+                 libauditd/Makefile
                  libbsm/Makefile
                  modules/Makefile
                  modules/auditfilter_noop/Makefile
