--- a/bin/Makefile.in
+++ b/bin/Makefile.in
@@ -15,7 +15,7 @@
 @SET_MAKE@
 
 #
-# $P4: //depot/projects/trustedbsd/openbsm/bin/Makefile.in#9 $
+# $P4: //depot/projects/trustedbsd/openbsm/bin/Makefile.in#10 $
 #
 VPATH = @srcdir@
 pkgdatadir = $(datadir)/@PACKAGE@
@@ -36,8 +36,8 @@ POST_UNINSTALL = :
 build_triplet = @build@
 host_triplet = @host@
 @HAVE_AUDIT_SYSCALLS_TRUE@am__append_1 = \
-@HAVE_AUDIT_SYSCALLS_TRUE@	auditd		\
-@HAVE_AUDIT_SYSCALLS_TRUE@	audit
+@HAVE_AUDIT_SYSCALLS_TRUE@	audit		\
+@HAVE_AUDIT_SYSCALLS_TRUE@	auditd
 
 subdir = bin
 DIST_COMMON = $(srcdir)/Makefile.am $(srcdir)/Makefile.in
@@ -61,7 +61,7 @@ RECURSIVE_CLEAN_TARGETS = mostlyclean-recursive clean-recursive	\
   distclean-recursive maintainer-clean-recursive
 ETAGS = etags
 CTAGS = ctags
-DIST_SUBDIRS = auditfilterd auditreduce praudit auditd audit
+DIST_SUBDIRS = auditfilterd auditreduce praudit audit auditd
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
 ACLOCAL = @ACLOCAL@
 AMTAR = @AMTAR@
