Don't use sys/endian.h unless be32enc becomes available as a result of including it; FreeBSD 4.x's sys/endian.h is not capable enough to meet our requirements, so must use our compat/endian.h there.
[git-p4: depot-paths = "//depot/projects/trustedbsd/openbsm/": change = 154996]

--- a/config/config.h.in
+++ b/config/config.h.in
@@ -6,6 +6,9 @@
 /* Define if audit system calls present */
 #undef HAVE_AUDIT_SYSCALLS
 
+/* Define if be32enc is present */
+#undef HAVE_BE32ENC
+
 /* Define to 1 if you have the `bzero' function. */
 #undef HAVE_BZERO
 
