--- a/libbsm/Makefile.in
+++ b/libbsm/Makefile.in
@@ -15,7 +15,7 @@
 @SET_MAKE@
 
 #
-# $P4: //depot/projects/trustedbsd/openbsm/libbsm/Makefile.in#13 $
+# $P4: //depot/projects/trustedbsd/openbsm/libbsm/Makefile.in#14 $
 #
 
 VPATH = @srcdir@
@@ -60,15 +60,15 @@ libLTLIBRARIES_INSTALL = $(INSTALL)
 LTLIBRARIES = $(lib_LTLIBRARIES)
 libbsm_la_LIBADD =
 am__libbsm_la_SOURCES_DIST = bsm_audit.c bsm_class.c bsm_control.c \
-	bsm_domain.c bsm_errno.c bsm_event.c bsm_flags.c bsm_io.c \
-	bsm_mask.c bsm_socket_type.c bsm_token.c bsm_user.c \
+	bsm_domain.c bsm_errno.c bsm_event.c bsm_fcntl.c bsm_flags.c \
+	bsm_io.c bsm_mask.c bsm_socket_type.c bsm_token.c bsm_user.c \
 	bsm_notify.c bsm_wrappers.c
 @HAVE_AUDIT_SYSCALLS_TRUE@am__objects_1 = bsm_notify.lo \
 @HAVE_AUDIT_SYSCALLS_TRUE@	bsm_wrappers.lo
 am_libbsm_la_OBJECTS = bsm_audit.lo bsm_class.lo bsm_control.lo \
-	bsm_domain.lo bsm_errno.lo bsm_event.lo bsm_flags.lo bsm_io.lo \
-	bsm_mask.lo bsm_socket_type.lo bsm_token.lo bsm_user.lo \
-	$(am__objects_1)
+	bsm_domain.lo bsm_errno.lo bsm_event.lo bsm_fcntl.lo \
+	bsm_flags.lo bsm_io.lo bsm_mask.lo bsm_socket_type.lo \
+	bsm_token.lo bsm_user.lo $(am__objects_1)
 libbsm_la_OBJECTS = $(am_libbsm_la_OBJECTS)
 DEFAULT_INCLUDES = -I. -I$(top_builddir)/config@am__isrc@
 depcomp = $(SHELL) $(top_srcdir)/config/depcomp
@@ -202,14 +202,16 @@ top_srcdir = @top_srcdir@
 @USE_NATIVE_INCLUDES_TRUE@INCLUDES = -I$(top_builddir) -I$(top_srcdir)
 lib_LTLIBRARIES = libbsm.la
 libbsm_la_SOURCES = bsm_audit.c bsm_class.c bsm_control.c bsm_domain.c \
-	bsm_errno.c bsm_event.c bsm_flags.c bsm_io.c bsm_mask.c \
-	bsm_socket_type.c bsm_token.c bsm_user.c $(am__append_1)
+	bsm_errno.c bsm_event.c bsm_fcntl.c bsm_flags.c bsm_io.c \
+	bsm_mask.c bsm_socket_type.c bsm_token.c bsm_user.c \
+	$(am__append_1)
 man3_MANS = \
 	au_class.3	\
 	au_control.3	\
 	au_domain.3	\
 	au_errno.3	\
 	au_event.3	\
+	au_fcntl_cmd.3	\
 	au_free_token.3	\
 	au_io.3		\
 	au_mask.3	\
@@ -294,6 +296,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/bsm_domain.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/bsm_errno.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/bsm_event.Plo@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/bsm_fcntl.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/bsm_flags.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/bsm_io.Plo@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/bsm_mask.Plo@am__quote@
