--- a/configure.ac
+++ b/configure.ac
@@ -3,9 +3,10 @@
 
 AC_PREREQ(2.59)
 AC_INIT([OpenBSM], [1.2alpha1], [trustedbsd-audit@TrustesdBSD.org],[openbsm])
-AC_REVISION([$P4: //depot/projects/trustedbsd/openbsm/configure.ac#55 $])
+AC_REVISION([$P4: //depot/projects/trustedbsd/openbsm/configure.ac#56 $])
 AC_CONFIG_SRCDIR([bin/auditreduce/auditreduce.c])
 AC_CONFIG_AUX_DIR(config)
+AC_CONFIG_MACRO_DIR([m4])
 AC_CONFIG_HEADER([config/config.h])
 AM_MAINTAINER_MODE
 
