Generate configure following vis(3) changes to OpenBSM.
[git-p4: depot-paths = "//depot/projects/trustedbsd/openbsm/": change = 214756]

--- a/config/config.h.in
+++ b/config/config.h.in
@@ -140,6 +140,9 @@
 /* Define to 1 if you have the <vfork.h> header file. */
 #undef HAVE_VFORK_H
 
+/* Define to 1 if you have the `vis' function. */
+#undef HAVE_VIS
+
 /* Define to 1 if `fork' works. */
 #undef HAVE_WORKING_FORK
 
