--- a/configure.ac
+++ b/configure.ac
@@ -3,7 +3,7 @@
 
 AC_PREREQ(2.59)
 AC_INIT([OpenBSM], [1.2alpha1], [trustedbsd-audit@TrustesdBSD.org],[openbsm])
-AC_REVISION([$P4: //depot/projects/trustedbsd/openbsm/configure.ac#60 $])
+AC_REVISION([$P4: //depot/projects/trustedbsd/openbsm/configure.ac#61 $])
 AC_CONFIG_SRCDIR([bin/auditreduce/auditreduce.c])
 AC_CONFIG_AUX_DIR(config)
 AC_CONFIG_MACRO_DIR([m4])
@@ -182,7 +182,7 @@ AC_TRY_LINK([
 	#include <machine/endian.h>
 	#endif
 ], [
-	be32toh(0);
+	(void)be32toh(0);
 ], [], [
 	AC_DEFINE(USE_COMPAT_ENDIAN_H,, Define if compat/endian.h is required)
 	AC_MSG_RESULT([using compat/endian.h])
