--- a/configure.ac
+++ b/configure.ac
@@ -2,7 +2,7 @@
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ(2.59)
-AC_INIT([OpenBSM], [1.2-alpha3], [trustedbsd-audit@TrustesdBSD.org],[openbsm])
+AC_INIT([OpenBSM], [1.2-alpha3], [trustedbsd-audit@TrustedBSD.org],[openbsm])
 AC_REVISION([$P4: //depot/projects/trustedbsd/openbsm/configure.ac#66 $])
 AC_CONFIG_MACRO_DIR([m4])
 AC_CONFIG_SRCDIR([bin/auditreduce/auditreduce.c])
