Make manpage MLINKs work again.
This was broken since the switch to autotools in OpenBSM 1.0 Alpha 5.

--- a/configure.ac
+++ b/configure.ac
@@ -28,6 +28,7 @@ AC_PROG_CC
 AC_PROG_INSTALL
 AC_PROG_LEX
 AC_PROG_LIBTOOL
+AC_PROG_LN_S
 AC_PROG_YACC
 
 AM_INIT_AUTOMAKE(AC_PACKAGE_NAME, AC_PACKAGE_VERSION)
