--- a/libbsm/Makefile.in
+++ b/libbsm/Makefile.in
@@ -269,6 +269,7 @@ man3_MANS = \
 	au_free_token.3	\
 	au_io.3		\
 	au_mask.3	\
+	au_notify.3	\
 	au_open.3	\
 	au_socket_type.3	\
 	au_token.3	\
@@ -719,6 +720,9 @@ install-exec-hook:
 	  $(LN_S) -f au_mask.3 au_preselect.3 && \
 	  $(LN_S) -f au_mask.3 getauditflagsbin.3 && \
 	  $(LN_S) -f au_mask.3 getauditflagschar.3 && \
+	  $(LN_S) -f au_notify.3 au_get_state.3 && \
+	  $(LN_S) -f au_notify.3 au_notify_initialize.3 && \
+	  $(LN_S) -f au_notify.3 au_notify_terminate.3 && \
 	  $(LN_S) -f au_open.3 au_open.3 && \
 	  $(LN_S) -f au_open.3 au_write.3 && \
 	  $(LN_S) -f au_open.3 au_close.3 && \
