--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
   - if [ $TRAVIS_OS_NAME == "linux" ]; then
       sudo apt-get -qq update
       sudo apt-get -qq install byacc flex
-    if [ $TRAVIS_OS_NAME == "osx" ]; then
+    elif [ $TRAVIS_OS_NAME == "osx" ]; then
       brew update
       brew install byacc flex
     fi
