Actually make TravisCI multi OS work.  For real!
TravisCI collapses the whole if/elif/fi construct into a single line,
hence the individual commands need to be terminated.

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,9 @@ os:
 
 before_install:
   - if [ $TRAVIS_OS_NAME == "linux" ]; then
-      sudo apt-get -qq update
-      sudo apt-get -qq install byacc flex
+      sudo apt-get -qq update;
+      sudo apt-get -qq install byacc flex;
     elif [ $TRAVIS_OS_NAME == "osx" ]; then
-      brew update
-      brew install byacc flex
+      brew update;
+      brew install byacc flex;
     fi
