--- a/libbsm/Makefile.in
+++ b/libbsm/Makefile.in
@@ -756,6 +756,7 @@ install-exec-hook:
 	  $(LN_S) -f au_control.3 getacmin.3 && \
 	  $(LN_S) -f au_control.3 getacna.3 && \
 	  $(LN_S) -f au_control.3 getacpol.3 && \
+	  $(LN_S) -f au_control.3 getacqsize.3 && \
 	  $(LN_S) -f au_control.3 au_poltostr.3 && \
 	  $(LN_S) -f au_control.3 ac_strtopol.3 && \
 	  $(LN_S) -f au_domain.3 au_bsm_to_domain.3 && \
